--- a/code/EDEN/EDEN.csproj
+++ b/code/EDEN/EDEN.csproj
@@ -45,10 +45,11 @@
     <Compile Include="Application.cs" />
     <Compile Include="Creature.cs" />
     <Compile Include="Entity.cs" />
+    <Compile Include="NeuralNet.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Textures.cs" />
-	<Compile Include="Rand.cs" />
+    <Compile Include="Rand.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
