--- a/code/EDEN/EDEN.csproj
+++ b/code/EDEN/EDEN.csproj
@@ -50,6 +50,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Textures.cs" />
     <Compile Include="Rand.cs" />
+    <Compile Include="Camera.cs" />
+    <Compile Include="Food.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
