--- a/code/EDEN/EDEN.csproj
+++ b/code/EDEN/EDEN.csproj
@@ -7,7 +7,7 @@
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{5E4579CD-6B6A-46FC-8803-C51D522D1ADD}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>EDEN</RootNamespace>
     <AssemblyName>EDEN</AssemblyName>
@@ -55,7 +55,9 @@
     <Compile Include="Rand.cs" />
     <Compile Include="Camera.cs" />
     <Compile Include="Food.cs" />
-    <Compile Include="Creature.cs"/>
+    <Compile Include="Creature.cs" />
+    <Compile Include="Component.cs" />
+    <Compile Include="Simulation.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
