--- a/code/EDEN/EDEN.csproj
+++ b/code/EDEN/EDEN.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="Application.cs" />
     <Compile Include="Entity.cs" />
+    <Compile Include="Input.cs" />
     <Compile Include="MathHelper.cs" />
     <Compile Include="NeuralNet.cs" />
     <Compile Include="Program.cs" />
