--- a/code/EDEN/EDEN.csproj
+++ b/code/EDEN/EDEN.csproj
@@ -46,14 +46,17 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Application.cs" />
+    <Compile Include="Button.cs" />
     <Compile Include="Entity.cs" />
     <Compile Include="Global.cs" />
     <Compile Include="Input.cs" />
+    <Compile Include="MainMenu.cs" />
     <Compile Include="MathHelper.cs" />
     <Compile Include="NeuralNet.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuadTree.cs" />
+    <Compile Include="State.cs" />
     <Compile Include="Textures.cs" />
     <Compile Include="Rand.cs" />
     <Compile Include="Camera.cs" />
