--- a/code/EDEN/EDEN.csproj
+++ b/code/EDEN/EDEN.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Application.cs" />
     <Compile Include="Button.cs" />
     <Compile Include="Entity.cs" />
+    <Compile Include="Environment.cs" />
     <Compile Include="Global.cs" />
     <Compile Include="Input.cs" />
     <Compile Include="MainMenu.cs" />
