--- a/code/EDEN/EDEN.csproj
+++ b/code/EDEN/EDEN.csproj
@@ -53,9 +53,11 @@
     <Compile Include="MainMenu.cs" />
     <Compile Include="MathHelper.cs" />
     <Compile Include="NeuralNet.cs" />
+    <Compile Include="NumInput.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuadTree.cs" />
+    <Compile Include="SimMenu.cs" />
     <Compile Include="State.cs" />
     <Compile Include="Textures.cs" />
     <Compile Include="Rand.cs" />
