--- a/code/EDEN/EDEN.csproj
+++ b/code/EDEN/EDEN.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuadTree.cs" />
+    <Compile Include="Settings.cs" />
     <Compile Include="SimMenu.cs" />
     <Compile Include="State.cs" />
     <Compile Include="Textures.cs" />
