--- a/code/EDEN/EDEN.csproj
+++ b/code/EDEN/EDEN.csproj
@@ -46,28 +46,26 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Application.cs" />
-    <Compile Include="Button.cs" />
-    <Compile Include="Entity.cs" />
-    <Compile Include="Environment.cs" />
-    <Compile Include="Global.cs" />
+    <Compile Include="UserInterface\Button.cs" />
+    <Compile Include="Entities\Entity.cs" />
+    <Compile Include="Entities\Environment.cs" />
     <Compile Include="Input.cs" />
-    <Compile Include="MainMenu.cs" />
-    <Compile Include="MathHelper.cs" />
+    <Compile Include="States\MainMenu.cs" />
     <Compile Include="NeuralNet.cs" />
-    <Compile Include="NumInput.cs" />
+    <Compile Include="UserInterface\NumInput.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuadTree.cs" />
     <Compile Include="Settings.cs" />
-    <Compile Include="SimMenu.cs" />
-    <Compile Include="State.cs" />
+    <Compile Include="States\SimMenu.cs" />
+    <Compile Include="States\State.cs" />
     <Compile Include="Textures.cs" />
     <Compile Include="Rand.cs" />
     <Compile Include="Camera.cs" />
-    <Compile Include="Food.cs" />
-    <Compile Include="Creature.cs" />
+    <Compile Include="Entities\Food.cs" />
+    <Compile Include="Entities\Creature.cs" />
     <Compile Include="Component.cs" />
-    <Compile Include="Simulation.cs" />
+    <Compile Include="States\Simulation.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
@@ -128,6 +126,7 @@
     </None>
     <None Include="app.manifest" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
